[gd_scene load_steps=8 format=3 uid="uid://dvuxshn67b7bv"]

[ext_resource type="Script" path="res://Client/Scripts/Units/unit.gd" id="1_mgv8a"]
[ext_resource type="Texture2D" uid="uid://0ma31p6nrpj" path="res://Client/Sprites/units/unit_1_red.png" id="1_tm2hv"]
[ext_resource type="Texture2D" uid="uid://c80kgjmquyy30" path="res://Client/Sprites/selected.png" id="3_io3xt"]
[ext_resource type="Texture2D" uid="uid://capg52sfp7wkw" path="res://Client/Sprites/units/unit_1_blue.png" id="4_urqj5"]
[ext_resource type="Texture2D" uid="uid://btu0pps56mpo1" path="res://Client/Sprites/units/unit_2_red.png" id="5_rcum1"]
[ext_resource type="Texture2D" uid="uid://b4c5ah62gw5bx" path="res://Client/Sprites/units/unit_2_blue.png" id="6_qljqf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0emnx"]
radius = 40.0

[node name="unit" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_mgv8a")

[node name="box" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_io3xt")

[node name="unit_1_red" type="Sprite2D" parent="."]
texture = ExtResource("1_tm2hv")

[node name="unit_1_blue" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_urqj5")

[node name="unit_2_red" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_rcum1")

[node name="unit_2_blue" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_qljqf")

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0emnx")
one_way_collision_margin = 0.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
